--- a/container/package.json
+++ b/container/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "products",
+  "name": "container",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,10 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "faker": "^5.1.0",
     "html-webpack-plugin": "^4.5.0",
+    "nodemon": "^2.0.7",
     "webpack": "^5.4.0",
-    "webpack-cli": "^4.3.0",
+    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
