--- a/mfp/packages/dashboard/package.json
+++ b/mfp/packages/dashboard/package.json
@@ -5,11 +5,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "chart.js": "^2.9.4",
+    "chart.js": "^3.2.1",
     "primeflex": "^2.0.0",
-    "primeicons": "^4.0.0",
-    "primevue": "^3.0.1",
-    "vue": "^3.0.0"
+    "primeicons": "^4.1.0",
+    "primevue": "^3.4.0",
+    "vue": "^3.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -20,11 +20,11 @@
     "css-loader": "^5.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
-    "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.4",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
-    "vue-loader": "^16.0.0-beta.9",
-    "vue-style-loader": "^4.1.2",
+    "vue-loader": "^16.2.0",
+    "vue-style-loader": "^4.1.3",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0",
