--- a/single-spa-workshop/package.json
+++ b/single-spa-workshop/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack serve",
     "build": "webpack --mode production",
-    "postinstall": "husky install && ngcc --no-tsconfig --target @angular/core --properties es2015 && ngcc --no-tsconfig --target @angular/platform-browser --properties es2015 && ngcc --no-tsconfig --target @angular/common --properties es2015 && ngcc --no-tsconfig --target @angular/router --properties es2015 && ngcc --no-tsconfig --target @angular/platform-browser --properties es2015 && cd 02-angular-app && ngc && cd ../04-angular-app && ngc && cd ../05-angular-app && ngc && cd ..",
+    "postinstall": "husky install && ngcc --no-tsconfig --target @angular/core --properties es2015 && ngcc --no-tsconfig --target @angular/platform-browser --properties es2015 && ngcc --no-tsconfig --target @angular/common --properties es2015 && ngcc --no-tsconfig --target @angular/router --properties es2015 && ngcc --no-tsconfig --target @angular/platform-browser --properties es2015",
     "format": "prettier --write ."
   },
   "repository": {
